5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1752_1530.log
== TEST (2019-05-16 16:08:53) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while ct <= 80000:
	acP += pgI2 + pgI * percP
	
	acV += vmI2 + vmI * percV
	
	ct = acV+acP
	
	anos += 1
print(anos)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:08:55) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while ct <= 80000:
	acP += pgI2 + pgI * percP
	
	acV += vmI2 + vmI * percV
	
	ct = acV+acP
	
	anos += 1
print(anos)
-- OUTPUT:
32
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:10:33) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while ct <= 80000:
	acP += pgI2 + pgI * percP
	
	acV += vmI2 + vmI * percV
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct)
print(anos)
-- OUTPUT:
1519.5 1500 1500 ||| 1023.0 1000 1000 |||| 2542.5
3039.0 1500 1500 ||| 2046.0 1000 1000 |||| 5085.0
4558.5 1500 1500 ||| 3069.0 1000 1000 |||| 7627.5
6078.0 1500 1500 ||| 4092.0 1000 1000 |||| 10170.0
7597.5 1500 1500 ||| 5115.0 1000 1000 |||| 12712.5
9117.0 1500 1500 ||| 6138.0 1000 1000 |||| 15255.0
10636.5 1500 1500 ||| 7161.0 1000 1000 |||| 17797.5
12156.0 1500 1500 ||| 8184.0 1000 1000 |||| 20340.0
13675.5 1500 1500 ||| 9207.0 1000 1000 |||| 22882.5
15195.0 1500 1500 ||| 10230.0 1000 1000 |||| 25425.0
16714.5 1500 1500 ||| 11253.0 1000 1000 |||| 27967.5
18234.0 1500 1500 ||| 12276.0 1000 1000 |||| 30510.0
19753.5 1500 1500 ||| 13299.0 1000 1000 |||| 33052.5
21273.0 1500 1500 ||| 14322.0 1000 1000 |||| 35595.0
22792.5 1500 1500 ||| 15345.0 1000 1000 |||| 38137.5
24312.0 1500 1500 ||| 16368.0 1000 1000 |||| 40680.0
25831.5 1500 1500 ||| 17391.0 1000 1000 |||| 43222.5
27351.0 1500 1500 ||| 18414.0 1000 1000 |||| 45765.0
28870.5 1500 1500 ||| 19437.0 1000 1000 |||| 48307.5
30390.0 150
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:11:21) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while ct <= 80000:
	acP += pgI2 + pgI * percP
	
	acV += vmI2 + vmI * percV
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- OUTPUT:
1519.5 1500 1500 ||| 1023.0 1000 1000 |||| 2542.5 1
3039.0 1500 1500 ||| 2046.0 1000 1000 |||| 5085.0 2
4558.5 1500 1500 ||| 3069.0 1000 1000 |||| 7627.5 3
6078.0 1500 1500 ||| 4092.0 1000 1000 |||| 10170.0 4
7597.5 1500 1500 ||| 5115.0 1000 1000 |||| 12712.5 5
9117.0 1500 1500 ||| 6138.0 1000 1000 |||| 15255.0 6
10636.5 1500 1500 ||| 7161.0 1000 1000 |||| 17797.5 7
12156.0 1500 1500 ||| 8184.0 1000 1000 |||| 20340.0 8
13675.5 1500 1500 ||| 9207.0 1000 1000 |||| 22882.5 9
15195.0 1500 1500 ||| 10230.0 1000 1000 |||| 25425.0 10
16714.5 1500 1500 ||| 11253.0 1000 1000 |||| 27967.5 11
18234.0 1500 1500 ||| 12276.0 1000 1000 |||| 30510.0 12
19753.5 1500 1500 ||| 13299.0 1000 1000 |||| 33052.5 13
21273.0 1500 1500 ||| 14322.0 1000 1000 |||| 35595.0 14
22792.5 1500 1500 ||| 15345.0 1000 1000 |||| 38137.5 15
24312.0 1500 1500 ||| 16368.0 1000 1000 |||| 40680.0 16
25831.5 1500 1500 ||| 17391.0 1000 1000 |||| 43222.5 17
27351.0 1500 1500 ||| 18414.0 1000 1000 |||| 45765.0 18
28870.5 1500 1500 |
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:11:39) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while ct <= 80000:
	acP += pgI2 + pgI * percP
	
	acV += vmI2 + vmI * percV
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- OUTPUT:
1519.5 1500 1500 ||| 1023.0 1000 1000 |||| 2542.5 1
3039.0 1500 1500 ||| 2046.0 1000 1000 |||| 5085.0 2
4558.5 1500 1500 ||| 3069.0 1000 1000 |||| 7627.5 3
6078.0 1500 1500 ||| 4092.0 1000 1000 |||| 10170.0 4
7597.5 1500 1500 ||| 5115.0 1000 1000 |||| 12712.5 5
9117.0 1500 1500 ||| 6138.0 1000 1000 |||| 15255.0 6
10636.5 1500 1500 ||| 7161.0 1000 1000 |||| 17797.5 7
12156.0 1500 1500 ||| 8184.0 1000 1000 |||| 20340.0 8
13675.5 1500 1500 ||| 9207.0 1000 1000 |||| 22882.5 9
15195.0 1500 1500 ||| 10230.0 1000 1000 |||| 25425.0 10
16714.5 1500 1500 ||| 11253.0 1000 1000 |||| 27967.5 11
18234.0 1500 1500 ||| 12276.0 1000 1000 |||| 30510.0 12
19753.5 1500 1500 ||| 13299.0 1000 1000 |||| 33052.5 13
21273.0 1500 1500 ||| 14322.0 1000 1000 |||| 35595.0 14
22792.5 1500 1500 ||| 15345.0 1000 1000 |||| 38137.5 15
24312.0 1500 1500 ||| 16368.0 1000 1000 |||| 40680.0 16
25831.5 1500 1500 ||| 17391.0 1000 1000 |||| 43222.5 17
27351.0 1500 1500 ||| 18414.0 1000 1000 |||| 45765.0 18
28870.5 1500 1500 |
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:12:46) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while ct <= 80000:
	
	acP +=  pgI * percP
	
	acV += vmI * percV
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- OUTPUT:
19.5 1500 1500 ||| 23.0 1000 1000 |||| 42.5 1
39.0 1500 1500 ||| 46.0 1000 1000 |||| 85.0 2
58.5 1500 1500 ||| 69.0 1000 1000 |||| 127.5 3
78.0 1500 1500 ||| 92.0 1000 1000 |||| 170.0 4
97.5 1500 1500 ||| 115.0 1000 1000 |||| 212.5 5
117.0 1500 1500 ||| 138.0 1000 1000 |||| 255.0 6
136.5 1500 1500 ||| 161.0 1000 1000 |||| 297.5 7
156.0 1500 1500 ||| 184.0 1000 1000 |||| 340.0 8
175.5 1500 1500 ||| 207.0 1000 1000 |||| 382.5 9
195.0 1500 1500 ||| 230.0 1000 1000 |||| 425.0 10
214.5 1500 1500 ||| 253.0 1000 1000 |||| 467.5 11
234.0 1500 1500 ||| 276.0 1000 1000 |||| 510.0 12
253.5 1500 1500 ||| 299.0 1000 1000 |||| 552.5 13
273.0 1500 1500 ||| 322.0 1000 1000 |||| 595.0 14
292.5 1500 1500 ||| 345.0 1000 1000 |||| 637.5 15
312.0 1500 1500 ||| 368.0 1000 1000 |||| 680.0 16
331.5 1500 1500 ||| 391.0 1000 1000 |||| 722.5 17
351.0 1500 1500 ||| 414.0 1000 1000 |||| 765.0 18
370.5 1500 1500 ||| 437.0 1000 1000 |||| 807.5 19
390.0 1500 1500 ||| 460.0 1000 1000 |||| 850.0 20
409.5 1500 1500 |||
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:12:59) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while ct <= 80000:
	
	acP +=  pgI * percP
	
	acV += vmI * percV
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- OUTPUT:
19.5 1500 1500 ||| 23.0 1000 1000 |||| 42.5 1
39.0 1500 1500 ||| 46.0 1000 1000 |||| 85.0 2
58.5 1500 1500 ||| 69.0 1000 1000 |||| 127.5 3
78.0 1500 1500 ||| 92.0 1000 1000 |||| 170.0 4
97.5 1500 1500 ||| 115.0 1000 1000 |||| 212.5 5
117.0 1500 1500 ||| 138.0 1000 1000 |||| 255.0 6
136.5 1500 1500 ||| 161.0 1000 1000 |||| 297.5 7
156.0 1500 1500 ||| 184.0 1000 1000 |||| 340.0 8
175.5 1500 1500 ||| 207.0 1000 1000 |||| 382.5 9
195.0 1500 1500 ||| 230.0 1000 1000 |||| 425.0 10
214.5 1500 1500 ||| 253.0 1000 1000 |||| 467.5 11
234.0 1500 1500 ||| 276.0 1000 1000 |||| 510.0 12
253.5 1500 1500 ||| 299.0 1000 1000 |||| 552.5 13
273.0 1500 1500 ||| 322.0 1000 1000 |||| 595.0 14
292.5 1500 1500 ||| 345.0 1000 1000 |||| 637.5 15
312.0 1500 1500 ||| 368.0 1000 1000 |||| 680.0 16
331.5 1500 1500 ||| 391.0 1000 1000 |||| 722.5 17
351.0 1500 1500 ||| 414.0 1000 1000 |||| 765.0 18
370.5 1500 1500 ||| 437.0 1000 1000 |||| 807.5 19
390.0 1500 1500 ||| 460.0 1000 1000 |||| 850.0 20
409.5 1500 1500 |||
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:13:27) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while anos < 3:
	
	acP +=  pgI * percP
	
	acV +=  vmI * percV
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- OUTPUT:
19.5 1500 1500 ||| 23.0 1000 1000 |||| 42.5 1
39.0 1500 1500 ||| 46.0 1000 1000 |||| 85.0 2
58.5 1500 1500 ||| 69.0 1000 1000 |||| 127.5 3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:14:14) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while anos < 3:
	
	acP = acP + pgI * percP
	
	acV = acV + vmI * percV
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- OUTPUT:
19.5 1500 1500 ||| 23.0 1000 1000 |||| 42.5 1
39.0 1500 1500 ||| 46.0 1000 1000 |||| 85.0 2
58.5 1500 1500 ||| 69.0 1000 1000 |||| 127.5 3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:14:33) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while anos < 3:
	
	acP = pgI + pgI * percP
	
	acV = acV + vmI * percV
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- OUTPUT:
1519.5 1500 1500 ||| 23.0 1000 1000 |||| 1542.5 1
1519.5 1500 1500 ||| 46.0 1000 1000 |||| 1565.5 2
1519.5 1500 1500 ||| 69.0 1000 1000 |||| 1588.5 3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:14:48) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while anos < 3:
	
	pgI += pgI * percP
	
	acV = acV + vmI * percV
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- OUTPUT:
0 1500 1519.5 ||| 23.0 1000 1000 |||| 23.0 1
0 1500 1539.2535 ||| 46.0 1000 1000 |||| 46.0 2
0 1500 1559.2637955 ||| 69.0 1000 1000 |||| 69.0 3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:15:07) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while anos < 3:
	
	pgI += pgI * percP
	acP = pgI
	
	acV = acV + vmI * percV
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- OUTPUT:
1519.5 1500 1519.5 ||| 23.0 1000 1000 |||| 1542.5 1
1539.2535 1500 1539.2535 ||| 46.0 1000 1000 |||| 1585.2535 2
1559.2637955 1500 1559.2637955 ||| 69.0 1000 1000 |||| 1628.2637955 3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:16:04) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while anos < 3:
	
	pgI2 += pgI * percP
	acP = pgI
	
	vmI2 += vmI * percV
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- OUTPUT:
1500 1519.5 1500 ||| 0 1023.0 1000 |||| 1500 1
1500 1539.0 1500 ||| 0 1046.0 1000 |||| 1500 2
1500 1558.5 1500 ||| 0 1069.0 1000 |||| 1500 3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:16:49) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while anos < 3:
	
	pgI2 = pgI * percP
	acP = pgI2 + pgI
	
	vmI2 += vmI * percV
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- OUTPUT:
1519.5 19.5 1500 ||| 0 1023.0 1000 |||| 1519.5 1
1519.5 19.5 1500 ||| 0 1046.0 1000 |||| 1519.5 2
1519.5 19.5 1500 ||| 0 1069.0 1000 |||| 1519.5 3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:17:40) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while anos < 3:
	
	pgI2 += pgI * percP
	acP = 
	
	vmI2 += vmI * percV
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- ERROR:
File "XXXX", line 16
    acP = 
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:17:46) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while anos < 3:
	
	pgI2 += pgI * percP
	acP = pgI
	
	vmI2 += vmI * percV
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- OUTPUT:
1500 1519.5 1500 ||| 0 1023.0 1000 |||| 1500 1
1500 1539.0 1500 ||| 0 1046.0 1000 |||| 1500 2
1500 1558.5 1500 ||| 0 1069.0 1000 |||| 1500 3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:18:27) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while anos < 3:
	
	pgI2 += pgI2 * percP
	acP = pgI2 
	
	vmI2 += vmI * percV
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- OUTPUT:
1519.5 1519.5 1500 ||| 0 1023.0 1000 |||| 1519.5 1
1539.2535 1539.2535 1500 ||| 0 1046.0 1000 |||| 1539.2535 2
1559.2637955 1559.2637955 1500 ||| 0 1069.0 1000 |||| 1559.2637955 3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:18:52) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while anos < 3:
	
	pgI2 += pgI2 * percP
	acP = pgI2
	
	vmI2 += vmI * percV
	acV = vmI2
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- OUTPUT:
1519.5 1519.5 1500 ||| 1023.0 1023.0 1000 |||| 2542.5 1
1539.2535 1539.2535 1500 ||| 1046.0 1046.0 1000 |||| 2585.2535 2
1559.2637955 1559.2637955 1500 ||| 1069.0 1069.0 1000 |||| 2628.2637955 3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:19:08) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while anos < 3:
	
	pgI2 += pgI2 * percP
	acP = pgI2
	
	vmI2 += vmI2 * percV
	acV = vmI2
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- OUTPUT:
1519.5 1519.5 1500 ||| 1023.0 1023.0 1000 |||| 2542.5 1
1539.2535 1539.2535 1500 ||| 1046.529 1046.529 1000 |||| 2585.7825000000003 2
1559.2637955 1559.2637955 1500 ||| 1070.599167 1070.599167 1000 |||| 2629.8629625000003 3
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:19:41) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while anos < 6:
	
	pgI2 += pgI2 * percP
	acP = pgI2
	
	vmI2 += vmI2 * percV
	acV = vmI2
	
	ct = acV+acP
	
	anos += 1
	print(acP,pgI2,pgI,"|||",acV,vmI2,vmI,"||||",ct,anos)
print(anos)
-- OUTPUT:
1519.5 1519.5 1500 ||| 1023.0 1023.0 1000 |||| 2542.5 1
1539.2535 1539.2535 1500 ||| 1046.529 1046.529 1000 |||| 2585.7825000000003 2
1559.2637955 1559.2637955 1500 ||| 1070.599167 1070.599167 1000 |||| 2629.8629625000003 3
1579.5342248415 1579.5342248415 1500 ||| 1095.2229478410002 1095.2229478410002 1000 |||| 2674.7571726825 4
1600.0681697644395 1600.0681697644395 1500 ||| 1120.413075641343 1120.413075641343 1000 |||| 2720.481245405783 5
1620.8690559713773 1620.8690559713773 1500 ||| 1146.182576381094 1146.182576381094 1000 |||| 2767.051632352471 6
6
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:20:15) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while ct <= 80000:
	
	pgI2 += pgI2 * percP
	acP = pgI2
	
	vmI2 += vmI2 * percV
	acV = vmI2
	
	ct = acV+acP
	
	anos += 1
	
print(anos)
-- OUTPUT:
183
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:20:26) 
-- CODE:
pgI = int(input())
vmI = int(input())
percP = float(input())/100
percV = float(input())/100

pgI2 = pgI
vmI2 = vmI
acP = 0
acV = 0
anos = 0
ct = 0

while ct <= 80000:
	
	pgI2 += pgI2 * percP
	acP = pgI2
	
	vmI2 += vmI2 * percV
	acV = vmI2
	
	ct = acV+acP
	
	anos += 1
	
print(anos)
-- EXECUTION TIME:
0.165342
-- TEST CASE 1:
---- input:
1500
1000
1.3
2.3
---- correct output:
183
---- user output:
183
-- TEST CASE 2:
---- input:
1200
100
2.3
25.3
---- correct output:
30
---- user output:
30
-- TEST CASE 3:
---- input:
3200
120
25.6
25.6
---- correct output:
14
---- user output:
14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
